<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="moviecatalog">MovieCatalog</string>
    <string name="welcome">Добро пожаловать в MovieCatalog</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти в аккаунт</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enterAccount">Вход в аккаунт</string>
    <string name="register">Регистрация</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="mail">Электронная почта</string>
    <string name="name">Имя</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="confirmPassword">Подтвердите пароль</string>
</resources>